[project]
name = "csv-tool"
version = "0.1.0"
description = "A command-line tool for inspecting, cleaning, summarizing, and plotting CSV files."
readme = "README.md"
authors = [
    { name = "nadang18", email = "nadang@ucsd.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
csv-tool = "csv_tool.main:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
